--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SEQUELIZE_HOST=docker.for.mac.localhost
+SEQUELIZE_HOST=database
 SEQUELIZE_USER=postgres
 SEQUELIZE_PASSWORD=docker
-SEQUELIZE_DATABASE=pierce-tech2
+SEQUELIZE_DATABASE=pierce-tech
 
 JWT_SECRET=MYSECRET
