--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon src/app.ts -r dotenv/config",
-    "preproduction": "npm install && sequelize db:create && sequelize db:migrate && sequelize db:seed:all && tsc",
+    "preproduction": "npm install --production && sequelize db:create && sequelize db:migrate && sequelize db:seed:all && tsc",
     "production": "node -r dotenv/config build/app.js"
   },
   "devDependencies": {
@@ -22,8 +22,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.3",
-    "sucrase": "^3.13.0",
-    "typescript": "^3.8.3"
+    "sucrase": "^3.13.0"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -45,6 +44,7 @@
     "pg": "^8.0.3",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.7",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "typescript": "^3.8.3"
   }
 }
